--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,14 +2,30 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My first assignement</title>
 <link rel="stylesheet" href="module2-solution.css">
 
 
 
+
 </head>
 <body>
- <h1 style="text-align: center;"> The best mug recipes  </h1>
- <div id=box>say hi</div>
+ <h1> The best mug recipes  </h1>
+
+ <div id=box>
+ 	<p>Brownie in a mug</p>
+ 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ </div>
+
+ <div id=box>
+ 	<p>Cookie in a mug</p>
+ 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ </div>
+
+ <div id=box>
+ 	<p>Mac and Cheese in a mug</p>
+ 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ </div>
 </body>
 </html>
