--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,28 +4,32 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>My first assignement</title>
-<link rel="stylesheet" href="module2-solution.css">
-
-
+<link rel="stylesheet" href="stylesheet.css">
 
 
 </head>
 <body>
  <h1> The best mug recipes  </h1>
 
- <div id=box>
- 	<p>Brownie in a mug</p>
- 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ <div class="col-lg-4 col-md-6 col-s-12 box">
+ 	<p class= "p1 recipe">Brownie in a mug</p1>
+ 	<div class= "instructions"> Add flour, sugar, baking powder, and salt to a mug and stir together.
+          Stir in milk, melted butter, and vanilla extract until smooth, being sure to scrape the bottom of the mug. Stir in sprinkles.
+          Cook in microwave for 70-90 seconds* (until cake is just set, but still barely shiny on top). </div>
  </div>
 
- <div id=box>
- 	<p>Cookie in a mug</p>
- 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ <div class="col-lg-4 col-md-6 col-s-12 box">
+ 	<p class= "p2 recipe">Cookie in a mug</p>
+ 	<div class = "instructions"> Microwave butter in a mug until melted, 30 seconds to 1 minute. With a spoon, mix in sugars, vanilla extract and salt until well-combined. Mix in egg yolk until no traces of the yolk are seen. Mix in flour. Fold in chocolate chips.
+    </div>
  </div>
 
- <div id=box>
- 	<p>Mac and Cheese in a mug</p>
- 	<div> tex tex tex te xte xt xejnruh iveknc </div>
+ <div class="col-lg-4 col-md-12 col-s-12 box">
+ 	<p class= "p3 recipe">Mac and Cheese in a mug</p>
+ 	<div class="instructions"> Mix the macaroni, water, and salt in a microwaveable mug.
+          Microwave for 2-3 minutes, then stir.
+          Add the milk, cheese, salt, and pepper, then stir.
+          Microwave for another 30 seconds, stir, and garnish with a sprinkle of chives. </div>
  </div>
 </body>
 </html>
