--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,8 +4,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 3 Solution</title>
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="ayre.css">
+	
 </head>
 
 <body>
