My second assignment

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Module 3 Solution</title>
-	<link rel="stylesheet" href="css/boot.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
@@ -43,92 +43,16 @@
 		<section class="row">
 			<div id="main-text" class="col-xs-12">
 				<div class="text-background">
-					<h3 id="chicken">Chicken</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					<h3 id="chicken">Chicken teriyaki</h3>
+					<p>Crispy skinless chicken thighs stir-fried and swimming in a beautiful flavoured homemade teriyaki sauce. A hint of garlic adds a twist on a traditional Japanese Teriyaki Chicken recipe and makes it absolutely addictive! This is better than ANY store-bought teriyaki sauce, guaranteed.
 					</p>
 					<h3 id="beef">Beef</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					<p>A beefsteak, often called just steak, is a flat cut of beef with parallel faces, usually cut perpendicular to the muscle fibers. In common restaurant service a single serving will have a raw mass ranging from 120 to 600 grams (4 to 21 oz). Beef steaks are usually grilled, pan fried, or broiled. The more tender cuts from the loin and rib are cooked quickly, using dry heat, and served whole. Less tender cuts from the chuck or round are cooked with moist heat or are mechanically tenderized
 					</p>
 					<h3 id="sushi">Sushi</h3>
-					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
-						Aenean
-						massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-						Donec
-						quam
-						felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
-						Donec
-						pede
-						justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet
-						a,venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras
-						dapibus.Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula,
-						porttitor
-						eu,
-						consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,
-						tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam
-						ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-						Maecenas
-						tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit adipiscing sem neque sed
-						ipsum.
-						Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante
-						tincidunt
-						tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci
-						eget
-						eros
-						faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna.
-						Sed
-						consequat, leo eget bibendum sodales, augue velit cursus nunc.
+					<p>Sushi (すし, 寿司, 鮨, pronounced [sɯɕiꜜ] or [sɯꜜɕi]) is a traditional Japanese dish of prepared vinegared rice (鮨飯, sushi-meshi), usually with some sugar and salt, accompanying a variety of ingredients (ネタ, neta), such as seafood, often raw, and vegetables. Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari (しゃり), or sumeshi (酢飯).[1]
+
+                    Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice or short-grain rice. It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat. Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish or pickled daikon (takuan) are popular garnishes for the dish.
 					</p>
 				</div>
 			</div>
@@ -140,4 +64,3 @@
 
 
 </body></html>
-
