--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,6 +6,8 @@
 	<title>Module 3 Solution</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<script src="js/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -29,9 +31,9 @@
 
 				<div id="collapsable-nav" class="collapse navbar-collapse">
 					<ul id="nav-list" class="nav navbar-nav visible-xs">
-						<li><a href="#chicken" class="text-center">Chicken</a></li>
-						<li><a href="#beef" class="text-center">Beef</a></li>
-						<li><a href="#sushi" class="text-center">Sushi</a></li>
+						<li><a href="#chicken" class="text-center">Chicken teriyaki</a></li>
+						<li><a href="#salad" class="text-center">Salad</a></li>
+						<li><a href="#burger" class="text-center">Burger</a></li>
 					</ul>
 				</div><!-- .collapse .navbar-collapse -->
 			</div><!-- .container -->
@@ -46,21 +48,22 @@
 					<h3 id="chicken">Chicken teriyaki</h3>
 					<p>Crispy skinless chicken thighs stir-fried and swimming in a beautiful flavoured homemade teriyaki sauce. A hint of garlic adds a twist on a traditional Japanese Teriyaki Chicken recipe and makes it absolutely addictive! This is better than ANY store-bought teriyaki sauce, guaranteed.
 					</p>
-					<h3 id="beef">Beef</h3>
-					<p>A beefsteak, often called just steak, is a flat cut of beef with parallel faces, usually cut perpendicular to the muscle fibers. In common restaurant service a single serving will have a raw mass ranging from 120 to 600 grams (4 to 21 oz). Beef steaks are usually grilled, pan fried, or broiled. The more tender cuts from the loin and rib are cooked quickly, using dry heat, and served whole. Less tender cuts from the chuck or round are cooked with moist heat or are mechanically tenderized
+					<h3 id="salad">Salad</h3>
+					<p>Crisp romaine lettuce, garlic croutons, Caesar dressing and shaved parmesan cheese.
+					with grilled chicken / $14.95 with blackened chicken / $15.95 with grilled shrimp (5) / $16.95 with blackened shrimp (5) / $17.95
 					</p>
-					<h3 id="sushi">Sushi</h3>
-					<p>Sushi (すし, 寿司, 鮨, pronounced [sɯɕiꜜ] or [sɯꜜɕi]) is a traditional Japanese dish of prepared vinegared rice (鮨飯, sushi-meshi), usually with some sugar and salt, accompanying a variety of ingredients (ネタ, neta), such as seafood, often raw, and vegetables. Styles of sushi and its presentation vary widely, but the one key ingredient is "sushi rice", also referred to as shari (しゃり), or sumeshi (酢飯).[1]
+					<h3 id="burger">Burger</h3>
+					<p>Our menu features burgers that are hand crafted with 100% Angus beef. Always fresh, never frozen. We use fresh, natural and delicious ingredients. Made to order and served medium, on toasty, classic style buns.
+					BBQ
+                    Angus beef, lettuce, tomato, caramelized onions, bacon, onion rings, cheddar, BBQ sauce
 
-                    Sushi is traditionally made with medium-grain white rice, though it can be prepared with brown rice or short-grain rice. It is very often prepared with seafood, such as squid, eel, yellowtail, salmon, tuna or imitation crab meat. Many types of sushi are vegetarian. It is often served with pickled ginger (gari), wasabi, and soy sauce. Daikon radish or pickled daikon (takuan) are popular garnishes for the dish.
 					</p>
 				</div>
 			</div>
 		</section>
 	</div>
 
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+
 
 
 </body></html>
