--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -8,7 +8,8 @@
   </script>
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye2.js"></script>
-  <script src="script.js"></script>
+  
+  <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
