--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -7,9 +7,8 @@
     var names = []; // DO NOT REMOVE
   </script>
   <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye2.js"></script>
-  
-  <script src="script.js" type="text/javascript"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
