My third assignment

--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
   <script>
+  	console.log("test after push")
     var names = []; // DO NOT REMOVE
   </script>
   <script src="SpeakHello.js"></script>
